# legros

./: .gitignore  CMakeLists.txt  README.md
cpp-implementation/: CMakeLists.txt
cpp-implementation/src/: bigram_segment.cpp  brown_classes.cpp  brown_classes.h  brown_classes_main.cpp  cosine_viterbi.cpp  cosine_viterbi.h  counters.cpp  forward_backward.cpp  get_substring_contexts.cpp  math_utils.h  options.cpp  options.h  substring_stats.cpp  substring_stats.h  subword_embeddings.cpp  test-eigen.cpp  test_unigram_model.cpp  train_subword_embeddings.cpp  unigram_model.cpp  unigram_model.h  vocabs.cpp  vocabs.h  word_cooccurrence_matrix.cpp
neuralpiece/: estimators.py  get_substring_contexts.py  merge_substring_contexts.py  model.py  ngrams_from_corpus.py  pretokenize.py  reduce_vocab.py  sample_bigrams.py  segment_vocab_with_bigram_stats.py  segment_vocab_with_subword_embeddings.py  tokenize.py  train.py  train_estimator.py  unigram_segment.py  vocab.py
neuralpiece/tests/: test_model.py  test_pretokenize.py
python/legros/: estimators.py  model.py  ngrams_from_corpus.py  pretokenized_vocab.py  reduce_vocab.py  sample_bigrams.py  score_subword_redundancy.py  segment_vocab_with_bigram_stats.py  segment_vocab_with_subword_embeddings.py  tokenize.py  train_estimator.py  unigram_segment.py
python/legros/tests/: test_model.py  test_pretokenize.py
python/neuralpiece/: compute_subword_embeddings.py  estimators.py  get_substring_contexts.py  model.py  ngrams_from_vocab.py  pretokenize.py  pretokenized_vocab.py  sample_bigrams.py  score_subword_redundancy.py  segment_vocab_with_bigram_stats.py  segment_vocab_with_subword_embeddings.py
python/neuralpiece/tests/: test_model.py
scripts/: distill_count_based_bigram_model.py  distill_count_based_bigram_model_from_allowed_init.py  distill_neural_bigram_model.py  embeddings_from_senencepiece.py  fasttext_for_subwords.py  init_sentencepiece_experiment.py  legros  merge_contexts.py  merge_embeddings.py  neuralpiece  subword_frequency.py  train_fasttext.py
src/: bigram_segment.cpp  brown_classes.cpp  cosine_viterbi.cpp  cosine_viterbi.h  counters.cpp  counters.h  forward_backward.cpp  merge_contexts.cpp  substring_stats.cpp  subword_embedding_model.cpp  subword_embedding_model.h  test-eigen.cpp  test_unigram_model.cpp  train_subword_embeddings.cpp  unigram_model.cpp  unigram_model.h  vocabs.cpp  vocabs.h  word_cooccurrence_matrix.cpp
